syntax = "proto3";
package frogchain.investibc;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "frogchain/x/investibc/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string adminAccount = 1 [(gogoproto.moretags) = "yaml:\"admin_account\""];
  
  string depositDenom = 2 [(gogoproto.moretags) = "yaml:\"deposit_denom\""];
  
  cosmos.base.v1beta1.Coin currentDepositAmount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"current_deposit_amount\""
  ];
  
  string liquidityDenom = 4 [(gogoproto.moretags) = "yaml:\"liquidity_denom\""];
  
  cosmos.base.v1beta1.Coin currentLiquidityAmount = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"current_liquidity_amount\""
  ];
  
  uint64 depositLastTime = 6;
  string icaConnectionId = 7;
  bool joinSwapExactAmountInPacketSent = 8; // broadcasted ICA tx to bootstrap Osmosis LP
  bool lockTokensPacketSent = 9; // set as true once Osmosis liquidity created
}
